** 2015.7.12 **

Fix for DVR search failure when addon is left open for extended periods
Remove un-implemented context menu delete on recordings window
Refresh rules and improve search refresh when addon remains open
Fix seek not stopping after key release
Fix guide search update resetting focus to first item

** 2015.7.3 **

Change name to HDHomeRun
Add DVR (requires a running DVR server)
Move slideout options to options screen
ESC/Previous Menu/Back now cycles through DVR (if available) -> Options -> LiveTV/Playing Recording

** 2015.6.18 **

Fix a bug in Windows interface detection

** 2015.6.4 **

Fix for discovery failure due to broadcast error on any interface

** 2015.5.22 **

When playing a channel, guide now hides automatically
Fix for guide not updating properly

** 2015.5.9 **

Fix for video not being visible when addon is running (Kodi 15 beta1)

** 2015.4.8 **

Fix error causing issues with multiple devices
Log lineup JSON decoding errors without traceback

2015.4.1a15

Do subnet broadcast to individual interfaces - fixes issues for devices with multiple interfaces
Improved logging

** 2015.3.30 **

Channel entry now accepts 'down' for '.' instead of 'select' and includes instructions to this effect
Added setting 'Show full detail on all guide items'
Fix for errors when no devices are found
Add handling for empty lineup
Improved icons on options dialog
Options dialog now auto-hides
After selecting a channel from a filtered list, focus is maintained on the channel when the list resets
Added channel changing via channel up/down buttons on remote (may not work - needs testing)
Organized first run control info by control type and removed some text

2015.3.26a1

Added options dialog with buttons for search, video settings, audio settings and volume control
Options dialog opens on context menu button or mouse right click
Options dialog also opens on move right or swipe left when the guide overlay is visible